# babyegg-serve

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/blog-api/: .env.example  Cargo.toml
apps/blog-api/docs/: auth-rbac-refactor.md
apps/blog-api/migrations/: 20260310000001_create_users.sql  20260325_000002_create_refresh_tokens.sql  20260325_000003_create_rbac_tables.sql  20260331000001_init_schema.sql
apps/blog-api/src/: app.rs  config.rs  lib.rs  main.rs  state.rs
apps/blog-api/src/db/: auth_repo.rs  mod.rs  post_repo.rs  rbac_repo.rs  session_repo.rs  user_repo.rs
apps/blog-api/src/modules/: mod.rs
apps/blog-api/src/modules/auth/: authorization.rs  current_user.rs  dto.rs  handler.rs  jwt.rs  middleware.rs  mod.rs  service.rs
apps/blog-api/src/modules/identity/: dto.rs  mod.rs  model.rs  service.rs
apps/blog-api/src/modules/post/: dto.rs  handler.rs  mod.rs  model.rs  service.rs
apps/blog-api/src/modules/rbac/: authorization.rs  catalog.rs  context.rs  dto.rs  handler.rs  keys.rs  mod.rs  service.rs
apps/blog-api/src/modules/user/: dto.rs  handler.rs  mod.rs  model.rs  service.rs
apps/blog-api/tests/: auth_rbac_claims.rs  auth_sessions.rs  health.rs  posts_management.rs  rbac_management.rs
apps/blog-api/tests/support/: mod.rs
crates/app-foundation/: Cargo.toml
crates/app-foundation/src/: config.rs  error.rs  error_code.rs  i18n.rs  lib.rs  locale.rs  logging.rs  query.rs  response.rs  state.rs  validation.rs
crates/app-foundation/src/middleware/: mod.rs  request_id.rs
crates/app-foundation/src/web/: health.rs  mod.rs
crates/app-testkit/: Cargo.toml
crates/app-testkit/src/: lib.rs
