[package]
name = "blog-api"
version.workspace = true
edition.workspace = true

[lib]
name = "blog_api"
path = "src/lib.rs"

[[bin]]
name = "blog_api"
path = "src/main.rs"

[dependencies]
app-foundation = { path = "../../crates/app-foundation" }

anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
password-hash.workspace = true

[dev-dependencies]
app-testkit = { path = "../../crates/app-testkit" }
http.workspace = true
http-body-util.workspace = true
tower.workspace = true
